--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h1 small{
     height:70px;
 }
 nav{
-    background-color: #f5f6f8;
+    background-color: white;
     color:#999;
     text-transform:uppercase;
     width:100vw;
@@ -111,26 +111,26 @@ nav{
             -webkit-box-align:center;
                 -ms-flex-align:center;
                     align-items:center;
-        box-sizing:border-box;
+            box-sizing:border-box;
             height:70px;
-            border-top: 3px solid #7eacb9;
+            border-top: 2px solid #4696E5;
 
         }
         ul.nav li a:hover{
             color:#fff;
-            background-color:#7eacb9;
+            background-color:#4696E5;
             -webkit-transition: all ease 400ms;
             transition: all ease 400ms;
         }
 
 /* Mobile Nav */
 .slicknav_menu{
-    background-color:#9ED7E8;
+    background-color:#4696E5;
     height:55px;
     z-index:1000;
 }
 .slicknav_btn{
-    background-color:#9ED7E8;
+    background-color:#4696E5;
 }
 .slicknav_menu .slicknav_icon-bar {
     height:4px;
@@ -157,7 +157,7 @@ div.splash{
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background: #9ED7E8;
+    background: #4696E5;
     height:60vh;
     margin-bottom:10px;
 }
@@ -181,9 +181,14 @@ div.title-wrapper{
     font-size:120px;
     margin:0 auto;
     cursor: pointer;
+    transition:all 800ms;
+}
+.fa-play-circle-o:hover{
+    transform:rotateY(360deg);
+    
 }
 #splash-text{
-    margin-top:60px;
+    margin-top:90px;
     font-size:4em;
     color:#f5f6f8;
     font-family: 'Open Sans', sans-serif;
@@ -191,7 +196,7 @@ div.title-wrapper{
     line-height:1em;
 }
 #fm{
-    color:#9ED7E8;
+    color:#4696E5;
     text-shadow:
     5px 5px white,
     1px -1px white,
@@ -204,7 +209,6 @@ div.title-wrapper{
     text-transform: uppercase;
     letter-spacing:3.4pt;
     font-size:1.3em;
-    margin-top:0;
     font-weight:bold;
 }
 
@@ -227,37 +231,36 @@ div.title-wrapper{
         -ms-flex-pack:justify;
             justify-content:space-between;
     width:200px;
-    background-color:#9ED7E8;
+    background-color:#4696E5;
     color:#eee;
     
 }
 #date, #left-arrow, #right-arrow{
        padding:10px;
-       cursor:pointer;
+       cursor:pointer;color:white;
 }
 #left-arrow, #right-arrow{
-   background-color:##8ED1E4;
+   background-color:inherit;
 }
 .social i{
     margin-left:20px;
-    color:#9ED7E8;
+    color:#4696E5;
     font-size:42px;
     cursor:pointer;
 }
 .social i:hover{
-    color:#DC6961;
+    color:#4696E5;
 }
 .section-heading{
     margin-bottom:20px;
     font-family:Source Sans Pro;
     font-weight:bold;
     font-size: 2em;
-    text-transform: uppercase;
     font-size:3em;
     letter-spacing: 1.5pt;
 }
 #event-title{
-    color:#9ED7E8;
+    color:#4696E5;
 }
 .section-content{
     display:-webkit-box;
@@ -273,13 +276,13 @@ div.title-wrapper{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin:0px;
     padding:0;
+    width:1200px;
+   
 }
 .portfolio-item{
     margin:0;
@@ -291,45 +294,68 @@ div.title-wrapper{
 .thumbnail {
     -webkit-transition: all 100ms ease-in-out;
     transition: all 100ms ease-in-out;
-    width:400px;
+    border-radius:4px;
+    text-align: center;
+    width:350px;
+     border:1px solid #eee;
+    border-radius:3px;
 }
+.thumbnail:hover{
+    transform: scale(1.1);
+    z-index:5000;
+}
+
 .thumbnail img{
-    width:100%;
-    height:100%;
+    width:50%;
+
+    border-radius:100%;
+    cursor:pointer;
+}
+
+.caption p{
+    border-top:1px solid #eee;
+}
+.section-content-heading{
+    margin-bottom:30px;
+    font-size:1.4em;
+    font-weight:500;
 }
 
 .event-title-link{
-    padding:10px 20px;
-    min-height:96px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    border-bottom:1px solid #eee;
 }
 .screenshot {
-    height: 180px;
+    height:50%;
+    width:50%:
 }
 
 .thumbnails li h2{
+    display:flex;
+    justify-content: center;
     text-align: center;
-    background-color: #7eacb9;
-    color: #ffffff;
+    background-color: white;
+    color:#222;
     font-size: 22px;
     letter-spacing: 1.5pt;
-    text-transform: uppercase;
     font-weight: 400;
-    margin-top: 0;
-    margin: 0;
-    padding: 20px 0;
-    height:46px;
-}
-#middle h2, #middle p {
-    background-color: #4f6b74;
+    margin:0;
 }
 .thumbnails li p, .thumbnails p {
-    color: #eee;
-    background-color: #7eacb9;
+    color:#222;
     margin: 0;
     padding: 20px 20px;
     font-size: 16px;
     font-weight: 200;
 }
+
+.darker h2, .darker p {
+    background-color: unset!important;
+    
+}
+
 p.meta{
     text-align:left;
 }
@@ -351,48 +377,92 @@ border-color: transparent white transparent transparent;
 }
 
 /* Section three */
-#three{
-    background-color: #9ED7E8;
+#three{ 
     width:100%;
     padding-bottom:50px;
-    padding-top:50px;
+    display:flex;
+}
+.three-left{
+    width:65%;
+    margin-right:80px;
+}
+.three-right{
+    width:35%;
+}
+.soon-container{
+    padding:20px 0px;
+}
+.soon-program{
+    padding:0px 0px;
+    border-bottom:1px solid #eee;
+    margin-bottom:20px;
+}
+.soon-program h5{
+    margin-top:0;
+}
+.heading-wrap{
+    background-color:#4696E5;
 }
 #program-title{
-    color:#eee;
+    color:#4696E5;
+    display:flex;
+    align-items:center;
+    margin-bottom:0;
+    margin-bottom:20px;
 }
-
+.event-container{
+    transition: all 150ms ease-in-out;
+}
 .event-container:not(#last){
     margin-bottom:20px;
 }
-
+.event-container:hover{
+    transform:scale(1.05);
+    
+    }
 .event-row{
     height:180px;
     display:-webkit-box;
     display:-ms-flexbox;
     display:flex;
+    cursor:pointer;
+}
+.event-row img{
+    width:180px;
+    min-width:180px;
+    border-radius:0 0 0 4px;
+    cursor:pointer;
 }
 .event-date{
     text-transform: uppercase;
     letter-spacing:1.3pt;
-    padding:20px 20px;
-    background-color:#6e96a2;
-    color:#eee;
+    padding:10px 0px;
+    color:#4696E5;
+    font-size:1.2em;
+    border-radius:4px 4px 0 0;
 }
 
 .event-info{
-    padding:20px 20px;;
-    color:#eee;
-    background-color:#7eacb9;
+    padding:0 20px;
+    color:#222;
+    background-color:white;
     font-size:1.2em;
+    overflow: hidden;
 }
 .event-title{
+    font-size:1.3em;
+    cursor:pointer;
+    padding-bottom:10px;
+    color:#222;
     margin:0;
-    text-transform: uppercase;
+    font-weight:300;
+    letter-spacing:1.5pt;
+    border-bottom:1px solid #eee;
     
 }
 /* SPONSORS */
 .sponsors{
-    background-color:#DC6961;
+    background-color:#F0F0F0;
     overflow:hidden;
 }
 .sponsors ul{
@@ -420,7 +490,7 @@ border-color: transparent white transparent transparent;
 }
 /* FOOTER */
 footer{
-    background-color:#f5756c;
+    background-color:#6aabea;
     color:#eee;
 }
 .footer-info{
@@ -434,11 +504,14 @@ footer{
         -ms-flex-align:center;
             align-items:center;
     text-transform: uppercase;
-    font-weight:200;
+    font-size:1.2em;
+    font-weight:300;
     padding:20px 0px;
 }
 .footer-info h3{
     margin:0;
+    font-weight:200;
+    letter-spacing:2px;
 }
 
 .footer-info .social i{
@@ -457,12 +530,6 @@ footer{
     }
 }
 
-@media screen and (max-width:960px){
-    #nav{
-        display:none;
-    }
-}
-
 @media screen and (max-width:1300px){
     .contain{
         max-width:900px;
@@ -475,8 +542,26 @@ footer{
     }
 }
 @media screen and (max-width:960px){
+
+    #nav{
+        display:none;
+    }
     .contain{
-        width:70vw;
+        width:50vw;
+    }
+    #three{
+        flex-direction:column;
+        align-items:center;
+    }
+    .program-wrap{
+        margin-bottom:50px;
+    }
+    .three-left,.three-right{
+        width:50vw;
+        margin:0;
+    }
+    .section-heading{
+        text-align:left;
     }
     .title-wrapper{
         -webkit-transform:scale(0.8);
@@ -502,18 +587,33 @@ footer{
                 align-items:center;
     }
     .thumbnail{
-        width:70vw;
-        margin-bottom:50px;
+        min-width:50vw;
+        margin-bottom:30px;
+    }
+    .event-title{
+        font-size:1.2em;
     }
     .event-info{
         overflow:hidden;
         padding-bottom:20px;
     }
 }
+@media screen and (max-width:670px){
+    .social{
+        display:none;
+    }
+
+    .date-select{
+        width:100%;
+    }
+}
 @media screen and (max-width:640px){
     .title-wrapper{
         -webkit-transform:scale(0.7);
                 transform:scale(0.7);
+    }
+    .thumbnail{
+        min-width:80vw;
     }
     .splash{
         height:50vh!important;
@@ -526,6 +626,7 @@ footer{
     .event-row{
         height:unset;
     }
+
 }
 @media screen and (max-width:490px){
     #triangle-top{
@@ -539,12 +640,7 @@ footer{
         letter-spacing: 1pt;
         font-size:42px!important;
     }
-    .social{
-        display:none;
-    }
-    .date-select{
-        width:100%;
-    }
+    
     .thumbnails li h2{
         height:unset;
     }
