--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ h1 small{
     margin:0 auto;
     max-width:1200px;
 }
+label{
+    display:none;
+}
 /* NAVBAR */
 
 #logo{
@@ -155,15 +158,23 @@ nav{
     margin-bottom:5px;
     background-color:#222;
 }
+.slicknav_nav li{
+    display:flex;
+    align-items:center;
+}
 .slicknav_nav li a{
     color:#222;
     text-transform: uppercase;
     border-radius:0!important;
-    font-size:2em;
+    font-size:1.4em;
+    height:60px;
     background:white;
     width:100%;
     margin:0;
     padding-left:20px;
+    display:flex;
+    align-items:center;
+    border-bottom:1px solid #eee;
 }
 /* Splash */
 
@@ -171,16 +182,24 @@ div.splash{
     display:-webkit-box;
     display:-ms-flexbox;
     display:flex;
-    flex-wrap:wrap;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-wrap:wrap;
+        flex-wrap:wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-height:60vh;
     margin-bottom:10px;
     overflow:hidden;
 }
 .tiles{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-wrap:wrap;
+    -ms-flex-wrap:wrap;
+        flex-wrap:wrap;
     height:60vh;
     position:absolute;
     z-index:-5;
@@ -189,10 +208,12 @@ div.splash{
 .tiles img{
     width:10%;
     height:33.3333333333%;
-    filter:brightness(0.3);
+    -webkit-filter:brightness(0.3);
+            filter:brightness(0.3);
 }
 .title-wrapper:hover .tiles img{
-    filter:brightness(0.7);
+    -webkit-filter:brightness(0.7);
+            filter:brightness(0.7);
 }
 .title-wrapper{
     margin-top:15vh;
@@ -203,7 +224,9 @@ div.splash{
     display:-webkit-box; 
     display:-ms-flexbox; 
     display:flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-orient:vertical;
     -webkit-box-direction:normal;
         -ms-flex-direction:column;
@@ -595,9 +618,15 @@ footer{
     background-color:#4696E5;
 }
 .player-container{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    justify-content: flex-start;
-    align-items:center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
     height:100%;
 }
 .player-container h3{
@@ -609,11 +638,13 @@ footer{
 }
 .play-icon,.fa-volume-up,.fa-volume-off{
     color:#eee;
+    -webkit-transition: all 200ms ease;
     transition: all 200ms ease;
     cursor:pointer;
 }
 .play-icon:hover,.fa-volume-up:hover,.fa-volume-off:hover{
-    transform:scale(1.08);
+    -webkit-transform:scale(1.08);
+            transform:scale(1.08);
 }
 .play-icon{
     font-size:82px;
@@ -641,50 +672,64 @@ footer{
 }
 
 .grid-container{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-wrap:wrap;
+    -ms-flex-wrap:wrap;
+        flex-wrap:wrap;
     margin-top:40px;
 }
 .episode{
     width:33.33333333%;
     height:350px;
-    
+    overflow:hidden;
+    position: relative;
 }
 .episode img{
     width:100%;
     height:350px;
-    transition: all 160ms ease;
+    -webkit-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+
 }
 
 .episode:hover img{
     -webkit-filter:brightness(0.25);
-    transform:scale(1.05);
+    -webkit-transform:scale(1.12);
+            transform:scale(1.12);
 }
 .episode-name{
     display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: rgba(232,22,33,0.2);
     position: absolute;
     margin-top: -354px;
-    width: 400px;
-    height: 350px;
+    width: 100%;
+    height:100%;
     color: #eee;
-    transform:scale(1.05);
+    -webkit-transform:scale(1.05);
+            transform:scale(1.05);
 }
 .episode:hover span{
+    display:-webkit-box!important;
+    display:-ms-flexbox!important;
     display:flex!important;
 }
 form{
     width:66.666666%;
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
 }
-::-webkit-input-placeholder{
-    width:50%;
-    padding-left:20px;
-}
-
 .form-left,.form-right{
     width:45%;
 }
@@ -701,7 +746,8 @@ form div input,textarea{
     border:1px solid #888;
     border-radius:6px;
     margin-bottom:20px;
-    padding:20px 0px;
+    box-sizing:border-box;
+    padding:20px;
 }
 #submit-form{
     width:100%;
@@ -717,15 +763,23 @@ form div input,textarea{
 /* MEMBERSHIP PAGE*/
 
 .panel-container{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
 }
 .info-panel,.member-panel,.donate-panel{
     width:33.33333333%;
 }
 .panel-header{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    justify-content: center;
-    align-items:center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
     margin-top:40px;
     padding:30px;
     font-size:2em;
@@ -741,14 +795,28 @@ form div input,textarea{
     padding:30px;
     padding-bottom:60px;
     margin-bottom:100px;
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .donate-form{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width:60%;
 }
 form div, form div input{
@@ -775,9 +843,16 @@ select{
     margin-bottom:20px;
 }
 .membership-form{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction: column;
-    align-items:center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
 }
 /* MEDIA QUERIES */
 
@@ -880,7 +955,10 @@ select{
         padding-bottom:20px;
     }
     form{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         width:100%;
     }
     .form-right,.form-left{
@@ -890,15 +968,25 @@ select{
         width:100%;
     }
     .panel-container{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .panel-info{
-        height:220px;
+        max-height:280px;
         margin-bottom:20px;
+    }
+    .episode{
+        width:290px;
+        height:220px;
+        margin:5px;
     }
 }
 @media screen and (max-width:670px){
-    
+    .contain{
+        width:80vw;
+    }
     .player-container{
         display:none;
     }
@@ -906,14 +994,19 @@ select{
         max-width:100vw;
         font-size:13px;
     }
+    .episode{
+        width:100%;
+        position:relative;
+        margin-bottom:30px;
+    }
+    .episode span{
+        width:100%;
+    }
     .social{
         display:none;
     }
     .tiles{
         height:50vh;
-    }
-    .date-select{
-        width:100%;
     }
      #triangle-top{
         display:none;
@@ -926,12 +1019,7 @@ select{
     .grid-container{
         max-width:100vw;
     }
-    .episode{
-        width:100vw;
-    }
-    .episode span{
-        width:100vw;
-    }
+
     .title-wrapper{
         -webkit-transform:scale(0.7);
                 transform:scale(0.7);
@@ -966,5 +1054,8 @@ select{
     .thumbnails li h2{
         height:unset;
     }
-    
+    .panel-info{
+       max-height:unset;
+       height:unset;
+    }
 }
